[gd_scene load_steps=23 format=4 uid="uid://bxi6r3quc47lr"]

[ext_resource type="Script" uid="uid://x5lgakeyd1s8" path="res://Scene/LevelEditorStage/LevelEditorStage.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c77trxyhyd658" path="res://Asset/Texture/GUI/LevelEditor/LevelEditorStageBackground.png" id="2"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://cof6j8v3q5r48" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bb4gkwkdx1ko4" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_1_highlight.png" id="5"]
[ext_resource type="Texture2D" uid="uid://b6vjjrtk0rxg0" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b20cmp1hc5bss" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_2_highlight.png" id="7"]
[ext_resource type="Texture2D" uid="uid://qvxtaol4hnpq" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_3.png" id="8"]
[ext_resource type="Texture2D" uid="uid://vkjbdaqi86qt" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_3_highlight.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dqh04pupb82a5" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_4.png" id="10"]
[ext_resource type="Texture2D" uid="uid://bgyh8dern15se" path="res://Asset/Texture/GUI/LevelEditor/DiySelect_4_highlight.png" id="11"]
[ext_resource type="PackedScene" uid="uid://ct3n6fw6u3k08" path="res://Prefab/GUI/LevelEditor/OnlineLevel/LevelEditorOnlineLevel.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://cifuwbh5763gi" path="res://Prefab/GUI/LevelEditor/InformationEditor/LevelEditorInformationEditor.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://ctai4lml4x0jf" path="res://Prefab/GUI/LevelEditor/EventEditor/LevelEditorEventEditor.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://7iektvi8ig8n" path="res://Prefab/GUI/LevelEditor/MapEditor/LevelEditorMapEditor.tscn" id="15"]
[ext_resource type="PackedScene" uid="uid://iw48s57cgwru" path="res://Prefab/GUI/LevelEditor/SeedbankEditor/LevelEditorSeedbankEditor.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://bddoj76vv0u1u" path="res://Prefab/GUI/LevelEditor/WaveEditor/LevelEditorWaveEditor.tscn" id="17"]
[ext_resource type="Texture2D" uid="uid://oks7e2sbpr1o" path="res://Asset/Texture/GUI/General/General/ArrowButton.png" id="18"]
[ext_resource type="Texture2D" uid="uid://bdx1imearld07" path="res://Asset/Texture/GUI/General/General/ArrowButtonDown.png" id="19"]
[ext_resource type="Texture2D" uid="uid://b8ybk8amgxut7" path="res://Asset/Texture/GUI/LevelEditor/LevelEditorStageTop.png" id="20"]
[ext_resource type="Texture2D" uid="uid://bf75v47tipxry" path="res://Asset/Texture/GUI/LevelEditor/LevelEditorStageLeft.png" id="21"]
[ext_resource type="Texture2D" uid="uid://ot3nmmflu8dv" path="res://Asset/Texture/GUI/LevelEditor/LevelEditorStageRight.png" id="22"]

[node name="LevelEditorStage" type="Control"]
layout_mode = 3
anchor_top = 0.013
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -7.8
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelEditorStageBackground" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="GUI" type="Control" parent="."]
anchors_preset = 0

[node name="LevelEditorChooseLayer" type="CanvasLayer" parent="GUI"]
unique_name_in_owner = true

[node name="LevelEditorChooseButtonNode" type="Control" parent="GUI/LevelEditorChooseLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -62.5
offset_right = 256.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LevelMineButton" parent="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
texture_normal = ExtResource("4")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")
ignore_texture_size = true
text = ""

[node name="LevelOnlineButton" parent="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
texture_normal = ExtResource("6")
texture_pressed = ExtResource("7")
texture_hover = ExtResource("7")
ignore_texture_size = true
text = ""

[node name="LevelDiyButton" parent="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
texture_normal = ExtResource("8")
texture_pressed = ExtResource("9")
texture_hover = ExtResource("9")
ignore_texture_size = true
text = ""

[node name="LevelLoadButton" parent="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(175, 175)
layout_mode = 2
texture_normal = ExtResource("10")
texture_pressed = ExtResource("11")
texture_hover = ExtResource("11")
ignore_texture_size = true
text = ""

[node name="LevelEditorMyLevelLayer" type="CanvasLayer" parent="GUI"]
unique_name_in_owner = true
visible = false

[node name="LevelEditorMyLevelLayer" type="Control" parent="GUI/LevelEditorMyLevelLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GUI/LevelEditorMyLevelLayer/LevelEditorMyLevelLayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 7.0
offset_right = 225.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 48
text = "我的关卡"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI/LevelEditorMyLevelLayer/LevelEditorMyLevelLayer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 104.0
offset_top = 64.0
offset_right = -104.0
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/LevelEditorMyLevelLayer/LevelEditorMyLevelLayer/MarginContainer"]
layout_mode = 2

[node name="MyLevelContainer" type="HFlowContainer" parent="GUI/LevelEditorMyLevelLayer/LevelEditorMyLevelLayer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelEditorOnlineLevelLayer" type="CanvasLayer" parent="GUI"]
unique_name_in_owner = true
visible = false

[node name="LevelEditorOnlineLevel" parent="GUI/LevelEditorOnlineLevelLayer" instance=ExtResource("12")]
unique_name_in_owner = true

[node name="LevelEditorLayer" type="CanvasLayer" parent="GUI"]
unique_name_in_owner = true
visible = false

[node name="LevelEditorInformationEditor" parent="GUI/LevelEditorLayer" instance=ExtResource("13")]
unique_name_in_owner = true

[node name="LevelEditorEventEditor" parent="GUI/LevelEditorLayer" instance=ExtResource("14")]
unique_name_in_owner = true
visible = false
offset_bottom = -80.0

[node name="LevelEditorMapEditor" parent="GUI/LevelEditorLayer" instance=ExtResource("15")]
unique_name_in_owner = true
visible = false

[node name="LevelEditorSeedbankEditor" parent="GUI/LevelEditorLayer" instance=ExtResource("16")]
unique_name_in_owner = true
visible = false

[node name="LevelEditorWaveEditor" parent="GUI/LevelEditorLayer" instance=ExtResource("17")]
unique_name_in_owner = true
visible = false

[node name="LevelEditorButtonNode" type="Control" parent="GUI/LevelEditorLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -540.0
offset_right = 810.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.8)

[node name="LevelEditorButtonContainer" type="HBoxContainer" parent="GUI/LevelEditorLayer/LevelEditorButtonNode"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 88.0
offset_top = -56.0
offset_right = -1.0
offset_bottom = -2.0
grow_horizontal = 2
alignment = 1

[node name="LevelInformationButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "编辑关卡信息"

[node name="LevelEventButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
toggle_mode = true
text = "编辑关卡事件"

[node name="LevelMapButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
toggle_mode = true
text = "编辑关卡地图"

[node name="LevelSeedbankButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
toggle_mode = true
text = "编辑卡牌库"

[node name="LevelWaveButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
toggle_mode = true
text = "编辑关卡波次"

[node name="LevelTestButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "测试关卡"

[node name="LevelSaveButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "保存关卡"

[node name="LevelExportButton" parent="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer" instance=ExtResource("3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "导出关卡"

[node name="ButtonLayer" type="CanvasLayer" parent="GUI"]
layer = 10

[node name="LevelEditorBackButton" type="TextureButton" parent="GUI/ButtonLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -80.0
offset_right = 109.0
offset_bottom = 18.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("18")
texture_pressed = ExtResource("19")
texture_hover = ExtResource("19")
stretch_mode = 0

[node name="Foreground" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LevelEditorStageTop" type="TextureRect" parent="Foreground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = -120.0
offset_bottom = -8.0
mouse_filter = 2
texture = ExtResource("20")
expand_mode = 1

[node name="LevelEditorStageLeft" type="TextureRect" parent="Foreground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -300.0
offset_right = -108.0
mouse_filter = 2
texture = ExtResource("21")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="LevelEditorStageRight" type="TextureRect" parent="Foreground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 116.0
offset_right = 320.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("22")
expand_mode = 1

[connection signal="pressed" from="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer/LevelMineButton" to="." method="LevelMineButtonPressed"]
[connection signal="pressed" from="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer/LevelOnlineButton" to="." method="LevelOnlineButtonPressed"]
[connection signal="pressed" from="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer/LevelDiyButton" to="." method="LevelDiyButtonPressed"]
[connection signal="pressed" from="GUI/LevelEditorChooseLayer/LevelEditorChooseButtonNode/VBoxContainer/LevelLoadButton" to="." method="LevelLoadButtonPressed"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelInformationButton" to="." method="PanelChange"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelEventButton" to="." method="PanelChange"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelMapButton" to="." method="PanelChange"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelSeedbankButton" to="." method="PanelChange"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelWaveButton" to="." method="PanelChange"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelTestButton" to="." method="LevelTestButtonPressed"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelSaveButton" to="." method="Save"]
[connection signal="pressed" from="GUI/LevelEditorLayer/LevelEditorButtonNode/LevelEditorButtonContainer/LevelExportButton" to="." method="Export"]
[connection signal="pressed" from="GUI/ButtonLayer/LevelEditorBackButton" to="." method="LevelEditorBackButtonPressed"]
